[package]

name = "tempdir"
version = "0.3.4"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/tempdir"
homepage = "https://github.com/rust-lang/tempdir"
documentation = "http://doc.rust-lang.org/tempdir"
description = """
A library for managing a temporary directory and deleting all contents when it's
dropped.
"""

[dependencies]
rand = "0.3"
